--- a/Travel Recommendation.ipynb
+++ b/Travel Recommendation.ipynb
@@ -2508,7 +2508,7 @@
     "tags": []
    },
    "source": [
-    "## TF-IDF Vectorizer  based on City and Category"
+    "## Count Vectorizer  based on City and Category"
    ]
   },
   {
@@ -3492,7 +3492,7 @@
    "id": "43fc573d",
    "metadata": {},
    "source": [
-    "## TF-IDF Vectorizer  based on Place Name, Description, City, and Category"
+    "## Count Vectorizer  based on Place Name, Description, City, and Category"
    ]
   },
   {
