--- a/Travel Recommendation.ipynb
+++ b/Travel Recommendation.ipynb
@@ -4249,7 +4249,7 @@
    "id": "eb68c7c1",
    "metadata": {},
    "source": [
-    "# Collaborative Filtering"
+    "# Content Base Filtering"
    ]
   },
   {
@@ -5368,7 +5368,7 @@
    "id": "2340b3ce",
    "metadata": {},
    "source": [
-    "In this collaborative filtering recommender system, users who enjoy visiting amusement parks or cultural sites such as museums are likely to receive recommendations for similar travel experiences, utilizing deep learning techniques, particularly the embedding layer. For instance, recommendations might include visits to places like Rabbit Town or Kampung Batik."
+    "In this content base filtering recommender system, users who enjoy visiting amusement parks or cultural sites such as museums are likely to receive recommendations for similar travel experiences, utilizing deep learning techniques, particularly the embedding layer. For instance, recommendations might include visits to places like Rabbit Town or Kampung Batik."
    ]
   }
  ],
